--- a/tests/artillery100-10000.yml
+++ b/tests/artillery100-10000.yml
@@ -1,5 +1,5 @@
 config:
-  target: "http://0.0.0.0:3000"
+  target: "http://0.0.0.0:8080"
   phases:
     - duration: 1
       arrivalRate: 100
@@ -13,5 +13,5 @@ scenarios:
   - flow:
     - loop:
       - get:
-          url: '/time/delay'
-      count: 50
+          url: '/ping'
+      count: 100
