--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -19,7 +19,7 @@ http {
     }
 
     server {
-        listen       80;
+        listen       8080;
 
         server_name  proxy;
 
@@ -40,8 +40,8 @@ http {
         location /stub_status {
             stub_status;
             allow all;
-            # allow 127.0.0.1;  # Allow only localhost to access the status
-            # allow 172.18.0.0/16;  # Allow Docker network to access the status
+            allow 127.0.0.1;  # Allow only localhost to access the status
+            allow 172.18.0.0/16;  # Allow Docker network to access the status
         }
     }
 }
