--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     container_name: mire
     environment:
       - HOST=0.0.0.0
-      - PORT=3000
     ports:
       - "3000:3000"
 
@@ -15,9 +14,9 @@ services:
       - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx_cache:/etc/nginx/nginx_cache:rw
     ports:
-      - "8080:80"
+      - "8080:8080"
     environment:
-      - NGINX_PORT=80
+      - NGINX_PORT=8080
       - NGINX_PROXY=mire
       - NGINX_PROXY_PORT=3000
     depends_on:
@@ -36,13 +35,12 @@ services:
   nginx_exporter:
     image: nginx/nginx-prometheus-exporter:1.3.0
     container_name: nginx_exporter
-    command:
-      - -nginx.scrape-uri=http://nginx_proxy:8080/stub_status
     ports:
       - "9113:9113"
     depends_on:
-      - prometheus
       - nginx_proxy
+    command:
+      - -nginx.scrape-uri=http://nginx_proxy:8080/stub_status
 
   grafana:
     image: grafana/grafana
@@ -50,8 +48,11 @@ services:
     depends_on:
       - prometheus
     volumes:
-      - ./grafana/data:/var/lib/grafana
+      - grafana-storage:/var/lib/grafana
     ports:
       - 3100:3000
     env_file:
       - .env
+
+volumes:
+  grafana-storage:
