--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -39,7 +39,7 @@ http {
 
         location /stub_status {
             stub_status;
-            allow all;
+            # allow all;
             allow 127.0.0.1;  # Allow only localhost to access the status
             allow 172.18.0.0/16;  # Allow Docker network to access the status
         }
