--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,8 +1,8 @@
-user  nginx;
+# user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+error_log  logs/error.log notice;
+# pid        /var/run/nginx.pid;
 
 
 events {
