--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
+x-global: &global
+  restart: unless-stopped
+
 services:
   mire:
+    <<: *global
     # image: mire
     build:
       context: .
@@ -11,6 +15,7 @@ services:
       - "3000:3000"
 
   nginx_proxy:
+    <<: *global
     # image: openresty/openresty:1.21.4.1-0-alpine
     # image: openresty_luaprom
     build:
@@ -30,6 +35,7 @@ services:
       - mire
 
   prometheus:
+    <<: *global
     image: prom/prometheus
     user: root
     container_name: prometheus
@@ -42,6 +48,7 @@ services:
       - nginx_proxy
 
   nginx_exporter:
+    <<: *global
     image: nginx/nginx-prometheus-exporter:1.3.0
     container_name: nginx_exporter
     ports:
@@ -52,16 +59,15 @@ services:
       - -nginx.scrape-uri=http://nginx_proxy:8080/stub_status
 
   grafana:
+    <<: *global
     image: grafana/grafana
     container_name: grafana
     depends_on:
       - prometheus
     volumes:
-      - grafana-storage:/var/lib/grafana
+      - ./grafana/dashboards:/var/lib/grafana/dashboards:rw
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
     ports:
       - 3100:3000
     env_file:
       - .env
-
-volumes:
-  grafana-storage:
