--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,6 +2,7 @@
 worker_processes  auto;
 
 error_log  logs/error.log notice;
+
 # pid        /var/run/nginx.pid;
 
 
@@ -11,7 +12,6 @@ events {
 
 
 http {
-
     proxy_cache_path /etc/nginx/nginx_cache keys_zone=mire_cache:10m;
 
     upstream app_mire {
@@ -38,12 +38,17 @@ http {
     metric_latency:observe(tonumber(ngx.var.request_time), {ngx.var.server_name})
     }
 
+    # log_format prometheus '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for" '
+    #                  '$request_time $bytes_sent $request_length';
+    # access_log logs/prometheus.log prometheus;
 
 
     server {
         listen       8080;
-
         server_name  proxy;
+
 
         location /problems/slow-image {
             proxy_cache mire_cache;
@@ -63,6 +68,7 @@ http {
             stub_status;
             allow 127.0.0.1;  # Allow only localhost to access the status
             allow 172.18.0.0/16;  # Allow Docker network to access the status
+
             # deny all;
         }
 
